价值投资自我修养

--- a/content/docs/2投资哲学/5_价值投资者的自我修养.md
+++ b/content/docs/2投资哲学/5_价值投资者的自我修养.md
@@ -15,19 +15,17 @@ toc: true
 
 从事投资的过程中，我渐渐发觉，投资一方面是对真理的探寻，探索外部世界；另一方面是谋求心灵的宁静，观照内心世界。外不能胜人，内不能克己，投资恐怕难以成功。
 
-就像许多人“懂得很多道理但依然过不好一生”一样，投资当中也有许多道理被反复提及，但许多人在应用时仍然不解其意。比如“当别人害怕时，你要贪婪；当别人贪婪时，你要害怕”“价格是你付出的，而价值才是你得到的”“利润只是一种意见，而现金流却是一个事实”“你只有买得便宜，才会卖得便宜”“永远不要把买入成本当作卖出的决策依据”……
-
-所以说，价值投资是一场不折不扣的修行，这条路有时熙熙攘攘，有时冷冷清清，但一直在这条路上行走的人，实在不多。能有更多的价值投资者同行，共同讨论和切磋，无论对于投资行业还是对于具体的投资人而言，都是一件好事。
+价值投资是一场不折不扣的修行，这条路有时熙熙攘攘，有时冷冷清清，但一直在这条路上行走的人，实在不多。能有更多的价值投资者同行，共同讨论和切磋，无论对于投资行业还是对于具体的投资人而言，都是一件好事。
 
 ## 坚持第一性原理
 
 价值投资者应该坚持第一性原理，从本质上理解投资，理解价值投资。
 
-第一性原理由亚里士多德提出，他强调：“任何一个系统都有自己的第一性原理，它是一个根基性的命题或假设。它不能被缺省，也不能被违反。”简单来说，在一个逻辑系统中，某些陈述可能由其他条件推导出来，而第一性原理就是不能从任何其他原理中推导出来的原理，是决定事物的最本质的不变法则，是天然的公理、思考的出发点、许多道理存在的前提。坚持第一性原理指不是用类比或者借鉴的思维来猜测问题，而是从“本来是什么”和“应该怎么样”出发来看问题，相信凡事背后皆有原理，先一层层剥开事物的表象，看到里面的本质，再从本质一层层往上走。
+第一性原理由亚里士多德提出，他强调：“任何一个系统都有自己的第一性原理，它是一个根基性的命题或假设。它不能被缺省，也不能被违反。”简单来说，在一个逻辑系统中，某些陈述可能由其他条件推导出来，而<u>第一性原理就是不能从任何其他原理中推导出来的原理，是决定事物的最本质的不变法则，是天然的公理、思考的出发点、许多道理存在的前提</u>。坚持第一性原理指不是用类比或者借鉴的思维来猜测问题，而是从“本来是什么”和“应该怎么样”出发来看问题，相信凡事背后皆有原理，先一层层剥开事物的表象，看到里面的本质，再从本质一层层往上走。
 
 ### 投资系统的第一性原理
 
-“要想在一生中获得投资成功，并不需要顶级的智商、超凡的商业头脑或内幕消息，而是需要一个稳妥的知识体系作为决策基础，并且有能力控制自己的情绪，使其不会对这种体系造成侵蚀。” 所以，与其把投资纳入艺术的范畴，不如把它纳入讲道理、讲逻辑的理性范畴，尤其是价值投资，是一件可学习、可传承、可沉淀的事情，一旦总结出投资原则和系统化的知识方法，就可以讲给出资人听，讲给创业者听，讲给大家听。**价值投资不必依靠天才，只需依靠正确的思维模式，并控制自己的情绪。**
+“要想在一生中获得投资成功，并不需要顶级的智商、超凡的商业头脑或内幕消息，而是需要一个稳妥的知识体系作为决策基础，并且有能力控制自己的情绪，使其不会对这种体系造成侵蚀。” **价值投资不必依靠天才，只需依靠正确的思维模式，并控制自己的情绪。**
 
 理解投资系统的第一性原理需要解构和溯源投资过程中的底层要素，即资本、资源、企业及其创造的价值；需要思考清楚投资的前提和出发点，即为什么投资，投资是为了什么。投资系统的第一性原理不是投资策略、方法或者理论，而是在变化的环境中，识别生意的本质属性，把好的资本、好的资源配置给最有能力的企业，帮助社会创造长期的价值。资本市场必须脱虚入实，将资本聚焦于最有能力、最需要帮助的企业。具体到价值投资层面，其出发点就是基于对基本面的理解，寻找价值被低估的公司并长期持有，从企业持续创造的价值中获得投资回报。
 
@@ -35,31 +33,29 @@ toc: true
 
 做投资应回归投资的基本定义，真正理解投资是什么。关于投资，有许多经典论述，比如约翰·博格讲过：“投资的本质是追求风险和成本调整之后的长期、可持续的投资回报，克服恐惧和贪婪，相信简单的常识。”本杰明·格雷厄姆与戴维·多德在《证券分析》中写道：“投资就是通过透彻的分析，保障本金安全并获得令人满意的回报率。”沃伦·巴菲特曾说：“在投资时，我们要用企业分析师的眼光，而不是市场分析师、宏观经济分析师，更不是股票分析师的眼光。”这些经典论述既是前人的规律总结，又是投资修养的内功心法，帮助投资人不断修正和完善思维体系、指导实践。
 
-研究分析、本金安全、长期可持续回报，构成了投资的关键词。除此之外，价值投资更是一个求知的过程，无法简单传承，一蹴而就。我们推崇研究驱动，做时间的朋友，就是在发现真相之后一点一点往上走，让每一次投资决策都有逻辑起点，把可理解的范畴拓展到最大，而把依靠运气的范畴缩至最小；同时，兼顾风险和收益，在尽可能小的风险中获取尽可能大的收益，尽量做确定性的、少而精的投资。
-
-与许多生意相比，投资是观点创造价值的生意。大卫·史文森认为，投资界一个重要的分水岭不在于区分个人投资者和机构投资者，而在于区分有能力进行高质量积极投资管理的投资者和无力为之的投资者。高质量的积极管理，其关键是思维模式。在我的理解和实践中，第一性原理不是简化分析模型，而是探究更底层的逻辑，发现“看不见的手”，找到各种现象的动因，进而分析更多端绪和因果。
+与许多生意相比，投资是观点创造价值的生意。大卫·史文森认为，<u>投资界一个重要的分水岭不在于区分个人投资者和机构投资者，而在于区分有能力进行高质量积极投资管理的投资者和无力为之的投资者</u>。高质量的积极管理，其关键是思维模式。在我的理解和实践中，第一性原理不是简化分析模型，而是探究更底层的逻辑，发现“看不见的手”，找到各种现象的动因，进而分析更多端绪和因果。
 
 ### 理解商业的底层逻辑
 
 做投资应理解商业的底层逻辑。在瞬息万变的金融市场，投资的本质是投资于变化和投资于人，因此投资的关键过程是在一个变化的生态体系中，寻找适应环境的超级商业物种。超级商业物种之所以能适应环境，其根本在于能够为社会持续不断地创造长期价值，让消费者获益。想研究清楚商业物种的属性，需要长期跟踪商业历史。尽管历史是无比宏大的，任何人都无法在宏观世界里搞清楚所有问题，但人能够在时空的进化中，看清楚一些商业的基本问题。需要注意的是，人们永远无法掌握真理，只能无限接近真理，真理对于人们来说是高维的、复杂的、不可知的，但驱动事物变化的原因往往是简单的、单一的、可判断的，因此就需要**从现象出发，抓住可以把握的关键要素，理解商业的底层逻辑。**
 
-在解构商业的底层逻辑时，需要注意：第一性原理强调非比较思维，不应该做单纯的对比或类比。所以，在研究商业问题时，既不能简单横向看竞争对手，亦步亦趋地模仿；也不能简单纵向做“时间机器”，把成熟市场的模式拿来套用。所以，我们非常强调长期、独立的研究：一是每天研究行业的小环境、公司的小环境，把生意与生态、竞争与合作、创新与适应这些要素想清楚、看清楚，了解环境的真实变化；二是研究商业物种如何适应环境，就像达尔文研究进化论一样，不抛弃细节，善于寻找支离破碎但又能相互证明的关键证据，看这个物种如何自然地进化和创新，如何跳到第二增长曲线。原发的创新往往最符合生意生态的进化。我们推崇动态的护城河，就是希望企业无论是自我颠覆还是生态重构，都能从自身处境出发，寻找创新的奇点。
+在解构商业的底层逻辑时，需要注意：第一性原理强调非比较思维，不应该做单纯的对比或类比。所以，在研究商业问题时，既不能简单横向看竞争对手，亦步亦趋地模仿；也不能简单纵向做“时间机器”，把成熟市场的模式拿来套用。所以，我们非常强<u>调长期、独立的研究</u>：<u>一是每天研究行业的小环境</u>、公司的小环境，把生意与生态、竞争与合作、创新与适应这些要素想清楚、看清楚，了解环境的真实变化；<u>二是研究商业物种如何适应环境</u>，就像达尔文研究进化论一样，不抛弃细节，善于寻找支离破碎但又能相互证明的关键证据，看这个物种如何自然地进化和创新，如何跳到第二增长曲线。原发的创新往往最符合生意生态的进化。我们推崇动态的护城河，就是希望企业无论是自我颠覆还是生态重构，都能从自身处境出发，寻找创新的奇点。
 
 坚持第一性原理是保持充分理性的过程，就像在孤独的空间里寻找一种被真相簇拥的暖意，在持续的启示中消解所有的疑问，是从理性升华出感性的过程。它不简单参照经验，不一味寻求旁证，溯源、拆解、重构和颠覆，在无限的空间中追问本质，自由思考。
 
 ## 强调理性的好奇、诚实与独立
 
-前面说过我的“三把火”理论，就是说人生中只有火烧不掉的东西才重要，即一个人的知识、能力和价值观，而支撑这三个方面的，是一个人理性的好奇、诚实与独立，这三点构成对价值投资者的基本要求。
+前面说过我的“三把火”理论，<u>就是说人生中只有火烧不掉的东西才重要，即一个人的知识、能力和价值观</u>，而支撑这三个方面的，是一个人理性的好奇、诚实与独立，这三点构成对价值投资者的基本要求。
 
 为什么强调理性？因为所谓的好奇、诚实和独立，都必须把严格的理性作为前提。理性意味着拒绝短期诱惑、功利心和许多天然的人性弱点，同时意味着拒绝主观臆断，以怀疑的态度、科学的方法去提出问题并找到答案。要想做出高质量的投资决策，关键在于尽可能做出前瞻性推演，而理性的好奇能够驱使人们探究事物的本源，为前瞻性推演奠定基础；理性的诚实能够保证人们在探索时不误入歧途；理性的独立能够保证人们做出理智的判断。理性是一种严谨的治学精神，是一种纯粹的道德责任，也是个人层面最大的风控，能够在各种复杂的情形中成为关键的思考角度。
 
 ### 理性的好奇
 
-投资人要始终对这个世界充满浓厚的好奇心，大到思考社会进步、商业演变的内在逻辑，小到思考企业如何运作才能够保持可持续的竞争优势。第一，好奇心一定源自原创性的头脑，可以打破所有条条框框的约束。好奇心的本质是自我驱动力，是一种朴素的求知欲和源自自身热爱的内驱力的结合。拥有好奇心的人善于提出问题、解决问题，而且提出问题比解决问题更彰显好奇心。寻找真相是困难的，但有好奇心的人就会爱折腾、爱琢磨，不满足于自己的已有经验，不断地问为什么，寻找现象和数据之间的底层联系，把事情想透彻。不能因为在行业待久了，就对创新的事物不管不问，甚至觉得创新的事物不靠谱。好奇心让人保持平和的心态，先尝试着接受，再去理解和判断。
+投资人要始终对这个世界充满浓厚的好奇心，大到思考社会进步、商业演变的内在逻辑，小到思考企业如何运作才能够保持可持续的竞争优势。第一，好奇心一定源自原创性的头脑，可以打破所有条条框框的约束。好奇心的本质是自我驱动力，是一种朴素的求知欲和源自自身热爱的内驱力的结合。拥有好奇心的人善于提出问题、解决问题，而且提出问题比解决问题更彰显好奇心。寻找真相是困难的，但有好奇心的人就会爱折腾、爱琢磨，不满足于自己的已有经验，不断地问为什么，寻找现象和数据之间的底层联系，把事情想透彻。好奇心让人保持平和的心态，先尝试着接受，再去理解和判断。
 
 第二，这种好奇心不受短期利益的影响，不受金钱驱动。不能仅研究或涉足带来短期快速回报的项目，而忽视自己长期热爱的领域。换句话说，每个人都应该从自己真正的好奇心出发，而不能被表象所迷惑，以为那是自己想追求的东西，有的时候人们喜欢追风口，但尤其需要谨记这一点：人多的地方你别去。在创业或者投资的过程中，有许多趋同性的投资、趋同性的创业，这时候就要看你是不是真正有好奇心，真正发现了创造价值的方式。
 
-第三，好奇心不受好胜心或者战胜他人的成就感所驱动，不是为了当第一把别人比下去，也不是为了战胜市场。邓普顿基金集团创始人约翰·邓普顿（John Templeton）[(26)](javascript:void(0))有句名言：“战胜市场是一个很富有野心的目标，但追求它的时候要小心为上。”我们无法验证市场是对的，但也绝不敢说市场是错的，没有对市场的主观评价，也不去做简单的对比。这构成了我们对市场的基本态度。
+第三，好奇心不受好胜心或者战胜他人的成就感所驱动，不是为了当第一把别人比下去，也不是为了战胜市场。邓普顿基金集团创始人约翰·邓普顿（John Templeton）有句名言：“战胜市场是一个很富有野心的目标，但追求它的时候要小心为上。”我们无法验证市场是对的，但也绝不敢说市场是错的，没有对市场的主观评价，也不去做简单的对比。这构成了我们对市场的基本态度。
 
 价值投资和好奇心天然绑定，如果没有对真理的好奇，很难拥有钻研的精神，也就无法获得超越市场的认知。理性的好奇强调依靠研究，而不是依靠垄断性资源或者运气，虽然那样会给人一种有捷径的错觉，但这些捷径或虚无的错觉都会误导认知。
 
@@ -67,21 +63,21 @@ toc: true
 
 如果好奇心是与生俱来的，那么诚实则是人生重要的后天选择。好奇心能够驱使一个人不断学习，而诚实则是一套自我矫正系统，让人真的可以“吃一堑，长一智”，实现正向的积累。
 
-首先，诚实是最好的信义，不要骗别人，要在理性中保持专业和严谨，不能为了一时诱惑而失信于别人。在资本市场，诚实尤为可贵，因为总有人心口不一、言行不一。在别人可以利用不诚实而获得短期成功的诱惑下，怎样能够保证自己不为所动、坚持内心的诚实，考验的是一个人的长期眼光。因欺骗而获得的成功不会持久，可能代价还很大，最后是“搬起砖头砸到自己的脚”。
+首先，诚实是最好的信义，不要骗别人，要在理性中保持专业和严谨，不能为了一时诱惑而失信于别人。在资本市场，诚实尤为可贵，因为总有人心口不一、言行不一。<u>在别人可以利用不诚实而获得短期成功的诱惑下，怎样能够保证自己不为所动、坚持内心的诚实，考验的是一个人的长期眼光。因欺骗而获得的成功不会持久，可能代价还很大，最后是“搬起砖头砸到自己的脚”。</u>
 
-其次，诚实不仅仅是对别人讲信用，关键还是对自己坦诚，对自我有清醒客观的认知。一方面，要对自己的缺点保持诚实，敢于及时认错、调整思路。特别是当市场出现明显反馈的时候，不要总是从外界找原因，要时常质疑一下自己，从自己找原因。持有一个观点，就一定要先尝试着去自我证伪，否则那就不是真正属于自己的观点。要善于扬长避短，在与市场的反复切磋中找到自己的思维误区和性格盲点。可以主动监控自己的判断和外界提供的反馈，建立调整和改善的机制，既要能从失败中找到自己的问题，避免尽推托于客观原因，又不能太悲观，要有“百战归来再读书”[(27)](javascript:void(0))的乐观主义精神。
+其次，<u>诚实不仅仅是对别人讲信用，关键还是对自己坦诚</u>，对自我有清醒客观的认知。一方面，要对自己的缺点保持诚实，敢于及时认错、调整思路。特别是当市场出现明显反馈的时候，不要总是从外界找原因，要时常质疑一下自己，从自己找原因。持有一个观点，就一定要先尝试着去自我证伪，否则那就不是真正属于自己的观点。要善于扬长避短，在与市场的反复切磋中找到自己的思维误区和性格盲点。可以主动监控自己的判断和外界提供的反馈，建立调整和改善的机制，既要能从失败中找到自己的问题，避免尽推托于客观原因，又不能太悲观，要有“百战归来再读书”的乐观主义精神。
 
-另一方面，还要对自己的优点保持诚实，敢于认可自己，在很难做判断的时候做出决策。许多时候，研究的过程无法穷尽所有可能，也无法获得足够多的信息。这就要求投资人做投资决策时，在信息不完善、不确定的状态下，诚实地相信自己已经运用第一性原理的思维模式，拿到了关键的信息。有的时候，模糊的正确要好于精细的误判。**这种诚实是投资人的一种勇气，能够帮助投资人克服很多心理障碍。**
+另一方面，还要<u>对自己的优点保持诚实，敢于认可自己，在很难做判断的时候做出决策</u>。许多时候，研究的过程无法穷尽所有可能，也无法获得足够多的信息。这就要求投资人做投资决策时，在信息不完善、不确定的状态下，诚实地相信自己已经运用第一性原理的思维模式，拿到了关键的信息。有的时候，模糊的正确要好于精细的误判。**这种诚实是投资人的一种勇气，能够帮助投资人克服很多心理障碍。**
 
 ### 理性的独立
 
 除了理性的好奇、诚实，价值投资同样强调理性的独立。独立是指独立探索精神，即智识上的独立，对事物有自己独立的意见和观点。中国传统的教育模式是讲堂式教育，而如今越来越强调思辨式教育——不是一味地服从权威，或者按大多数人的看法行事，而是根据自己的研究和思考得到答案。只有通过独立思考，不断客观地拷问自己是否尊重了事实和常识，形成的见识才是自己的。而且，这样的见识会转化成智慧，并会随着时间复合式增长。
 
-独立思考强调不能人云亦云，不能在市场波动时轻易地否定自己的结论。当我们的研究和洞察经历反复校验都没有问题时，一旦下了决定，只要前提没有变化，就要有笃定的精神。不要总是问别人怎么看，关键在于应该怎么看、怎么想，在金融市场中，人们普遍认为共识已经反映在价格中，这尤其需要警惕，因为共识和正确与否没有必然的因果关系。市场在一段时间里与你的看法不同，或者许多人的观点与你的不同，并不意味着你的观点是错误的。独立判断意味着对市场保持冷静的思考，不要轻易妥协。很多时候，妥协会产生一个“坡”，你从“坡”上慢慢下来，刚开始没有感觉，但下得越多速度越快，等你意识到的时候，往往已经很难改变了。独立性就是不盲目，不轻易受别人观点的影响，充分考虑各种可能性后，基于严谨的逻辑独立做出判断。
+独立思考强调不能人云亦云，不能在市场波动时轻易地否定自己的结论。<u>当我们的研究和洞察经历反复校验都没有问题时，一旦下了决定，只要前提没有变化，就要有*笃定的精神*</u>。不要总是问别人怎么看，关键在于应该怎么看、怎么想，在金融市场中，人们普遍认为共识已经反映在价格中，这尤其需要警惕，因为<u>共识和正确与否没有必然的因果关系</u>。市场在一段时间里与你的看法不同，或者许多人的观点与你的不同，并不意味着你的观点是错误的。独立判断意味着对市场保持冷静的思考，不要轻易妥协。很多时候，妥协会产生一个“坡”，你从“坡”上慢慢下来，刚开始没有感觉，但下得越多速度越快，等你意识到的时候，往往已经很难改变了。独立性就是不盲目，不轻易受别人观点的影响，充分考虑各种可能性后，基于严谨的逻辑独立做出判断。
 
-某种程度上，好的投资人应该去找真正正确的“非共识”。这些问题是投资中最难回答的：市场真正有效吗？市场共识是什么？所有的公开信息以及这些信息产生的结果都能合理反映在价格中吗？究竟哪些因素已经反映在价格中了，哪些还没有反映？许多创新企业的估值已经很高，而传统企业的估值往往偏低，乐观或者悲观的因素是否在估值层面有了充分甚至过分的反映？我们认为，往往是与众不同的视角，少数的、独立的决策，特别是真正正确的非共识，才有可能带来超越市场的回报，而且市场给你的回报将是呈指数级的。杰夫·贝佐斯表达过这样一个观点：“我相信，如果你要创新，必须愿意长时间被误解。你必须采取一个非共识但正确的观点，才能战胜竞争对手。”
+某种程度上，好的投资人<u>应该去找真正正确的“非共识”</u>。这些问题是投资中最难回答的：市场真正有效吗？市场共识是什么？所有的公开信息以及这些信息产生的结果都能合理反映在价格中吗？究竟哪些因素已经反映在价格中了，哪些还没有反映？许多创新企业的估值已经很高，而传统企业的估值往往偏低，乐观或者悲观的因素是否在估值层面有了充分甚至过分的反映？我们认为，往往是与众不同的视角，少数的、独立的决策，特别是真正正确的非共识，才有可能带来超越市场的回报，而且市场给你的回报将是呈指数级的。杰夫·贝佐斯表达过这样一个观点：“我相信，如果你要创新，必须愿意长时间被误解。你必须采取一个非共识但正确的观点，才能战胜竞争对手。”
 
-独立思考更加强调不能盲目信任自己的经验，不能有认知上的偏见。许多投资人喜欢复盘，总结过去的得失经验，但习惯用很老旧的经验去解决当前的问题，或者干脆简单机械地套用刚刚积攒的经验去解决新出现的问题，这其实比不积累经验还要可怕。很多人会避免犯相同的错误，但如果只是盲目信从经验，就有可能不断地犯新错误。许多人相信历史会周期往复，但也有人觉得这次会不一样，其实读历史的目的并不是一劳永逸地知道该怎么办，而是为了总结出规律，因此我们需要看到事情的多样性、丰富性。每次判断都是崭新的，都应该向前看。要把历史当作一种知识储备和情景训练，当作抵御重大风险的压舱石，而不是保你百战百胜的万能药。
+独立思考更加强调不能盲目信任自己的经验，不能有认知上的偏见。许多投资人喜欢复盘，总结过去的得失经验，但习惯用很老旧的经验去解决当前的问题，或者干脆简单机械地套用刚刚积攒的经验去解决新出现的问题，这其实比不积累经验还要可怕。很多人会避免犯相同的错误，但如果只是盲目信从经验，就有可能不断地犯新错误。许多人相信历史会周期往复，但也有人觉得这次会不一样，其实读<u>历史的目的并不是一劳永逸地知道该怎么办，而是为了总结出规律</u>，因此我们需要看到事情的多样性、丰富性。每次判断都是崭新的，都应该向前看。要把历史当作一种知识储备和情景训练，当作抵御重大风险的压舱石，而不是保你百战百胜的万能药。
 
 ## 拒绝投机
 
@@ -91,7 +87,7 @@ toc: true
 
 ### 拒绝零和游戏，做正和游戏
 
-有很多投资人会以任何价格购买任何公司的股票，只要这些公司的股票有上升的趋势，他们会在全市场都讨论某个公司时持仓加入；也有许多投资人会在大多数时间里坚持价值投资，但遇到特别容易赚钱的机会时也会偶尔尝试。华尔街的传奇人物卢西恩·胡伯尔（Lucien O. Hooper）有一句名言：“给我留下深刻印象的，是那些整天很放松的长线投资者，而不是那些短线的、经常换股的投机者。”我一直在思考，价值投资者的最大坚守是什么。得到的答案是：永远坚持做创造价值的事情。价值投资者是求成者，而不是求存者，求成者追求成功，而求存者往往把他人视为威胁。**价值投资不是击鼓传花的游戏，不是投资人之间的零和游戏，不应该从同伴手中赚钱，而应通过企业持续不断创造价值来获取收益，共同把蛋糕做大，是正和游戏。**
+有很多投资人会以任何价格购买任何公司的股票，只要这些公司的股票有上升的趋势，他们会在全市场都讨论某个公司时持仓加入；也有许多投资人会在大多数时间里坚持价值投资，但遇到特别容易赚钱的机会时也会偶尔尝试。华尔街的传奇人物卢西恩·胡伯尔（Lucien O. Hooper）有一句名言：“给我留下深刻印象的，是那些整天很放松的长线投资者，而不是那些短线的、经常换股的投机者。”我一直在思考，价值投资者的最大坚守是什么。得到的答案是：<u>永远坚持做创造价值的事情。价值投资者是求成者，而不是求存者，求成者追求成功，而求存者往往把他人视为威胁</u>。**价值投资不是击鼓传花的游戏，不是投资人之间的零和游戏，不应该从同伴手中赚钱，而应通过企业持续不断创造价值来获取收益，共同把蛋糕做大，是正和游戏。**
 
 资本市场是个多样且复杂的生态系统，在这样的市场中会出现各种各样赚快钱的机会。由于监管环境在不断变化，许多投资机构可以说一套做一套。但投资人真正应该看重的不仅仅是别人说了什么、做了什么，而是自己相信什么。在中国拒绝投机尤为困难，因为中国市场是一个非常宽容的市场，价格偏离价值的幅度经常很大，而且偏离的时间比较长，市场的有效性还处在一个不断成熟的阶段，中国企业的生命周期和盈利周期仍在不断变化，因此能够允许众多生存方式并存。
 
@@ -103,7 +99,7 @@ toc: true
 
 等待在投资中是一项极具挑战又极有价值的事情，有时候需要等待1年，有时候需要等待10年。**等待也是一种主动，等待不是什么都不做，保持耐心等待的最好做法就是对无关的事情连想都不要想，一直清楚什么是该做的、什么是不该做的。**
 
-《论语》中有句话：“虽小道，必有可观者焉；致远恐泥，是以君子不为也。”[(28)](javascript:void(0))要对坚持的事情富有耐心，驾驭情绪，时刻自我反思，保持高度专注。压力往往可以通过专注来消解，专注意味着你要敢于说“不”，不要去做对自己的核心目标没有用的事情。即使有余力去做更多的事情，或者自认为拥有及时把精力拉回来的自控力，我仍然建议你不要那样去做。你甚至可以休息来养精蓄锐，等待下一次机会。不要高估自己的自控力，更不要小看人性。回避短期心态，是价值投资者的重要修养。
+《论语》中有句话：“虽小道，必有可观者焉；致远恐泥，是以君子不为也。”要对坚持的事情富有耐心，驾驭情绪，时刻自我反思，保持高度专注。压力往往可以通过专注来消解，专注意味着你要敢于说“不”，不要去做对自己的核心目标没有用的事情。即使有余力去做更多的事情，或者自认为拥有及时把精力拉回来的自控力，我仍然建议你不要那样去做。你甚至可以休息来养精蓄锐，等待下一次机会。不要高估自己的自控力，更不要小看人性。回避短期心态，是价值投资者的重要修养。
 
 ## 警惕机械的价值投资
 
